Used vh unit to enhance responsivness and applied media queries for smaller sizes.

--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
 
 <body>
     <table>
-    <header>
-        <div class="inline-block logo">
-            <img src="images/logo.png">
-        </div>
-        <nav class="inline-block">
-            <ul>
-                <li>Menu</li>
-                <li>About</li>
-                <li>Music</li>
-                <li>Catering</li>
-                <li>Contact Us</li>
-            </ul>
-        </nav>
+        <header>
+            <div class="inline-block logo">
+                <img src="images/logo.png">
+            </div>
+            <nav class="inline-block">
+                <ul>
+                    <li>Menu</li>
+                    <li>About</li>
+                    <li>Music</li>
+                    <li>Catering</li>
+                    <li>Contact Us</li>
+                </ul>
+            </nav>
+        </header>
 
-    </header>
-    <section class="banner">
-        <img class="starBeer" src="images/star-beer.png">
-        <img class="circleMusic" src="images/circle-livemusic.png">
-    </section>
+        <section class="banner">
+            <img class="starBeer" src="images/star-beer.png">
+            <img class="circleMusic" src="images/circle-livemusic.png">
+        </section>
+
+        <section>
+            <div>
+                
+            </div>
+        </section>
     </table>
 </body>
 
