added a 3x3 grid for with images and descriptions. May try to make a new branch so I can work from my laptop as well.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,46 @@
             <img class="circleMusic" src="images/circle-livemusic.png">
         </section>
 
-        <section>
-            <div>
-                
+        <section class="threeByThree">
+            <div class="gridImage">
+                <img src="images/Ellipse 1.png">
+                <p class="gridText">Landmark stage home to local
+                    luminaries like
+                    Beatle Bash.</p>
+            </div>
+            <div class="gridImage">
+                <img src="images/Ellipse 2.png">
+                <p class="gridText">Chalkboard menu
+                    more consistent
+                    than the Ten
+                    Commandments.</p>
+            </div>
+            <div class="gridImage">
+                <img src="images/Ellipse 3.png">
+                <p class="gridText">Our best-selling Reuben sammie,
+                    though the French
+                    Dips are god-tier.</p>
+            </div>
+            <div class="gridImage">
+                <img src="images/Ellipse 4.png">
+                <p class="gridText">If you can’t choose,
+                    try every single
+                    item until we run
+                    out of ingredients.</p>
+            </div>
+            <div class="gridImage">
+                <img src="images/Ellipse 5.png">
+                <p class="gridText">Tables crucial to
+                    your experience,
+                    otherwise you’d be
+                    eating on the floor.</p>
+            </div>
+            <div class="gridImage">
+                <img src="images/Ellipse 6.png">
+                <p class="gridText">Legendary neon,
+                    permanently on,
+                    your North Star,
+                    a beacon of hope.</p>
             </div>
         </section>
     </table>
