Added Footer with flexbox, needs adjusting

--- a/index.html
+++ b/index.html
@@ -7,70 +7,89 @@
 </head>
 
 <body>
-    <table>
-        <header>
-            <div class="inline-block logo">
-                <img src="images/logo.png">
-            </div>
-            <nav class="inline-block">
-                <ul>
-                    <li>Menu</li>
-                    <li>About</li>
-                    <li>Music</li>
-                    <li>Catering</li>
-                    <li>Contact Us</li>
-                </ul>
-            </nav>
-        </header>
 
-        <section class="banner">
-            <img class="starBeer" src="images/star-beer.png">
-            <img class="circleMusic" src="images/circle-livemusic.png">
-        </section>
+    <header>
+        <div class="inline-block logo">
+            <img src="images/logo.png">
+        </div>
+        <nav class="inline-block">
+            <ul>
+                <li>Menu</li>
+                <li>About</li>
+                <li>Music</li>
+                <li>Catering</li>
+                <li>Contact Us</li>
+            </ul>
+        </nav>
+    </header>
 
-        <section class="threeByThree">
-            <div class="gridImage">
-                <img src="images/Ellipse 1.png">
-                <p class="gridText">Landmark stage home to local
-                    luminaries like
-                    Beatle Bash.</p>
-            </div>
-            <div class="gridImage">
-                <img src="images/Ellipse 2.png">
-                <p class="gridText">Chalkboard menu
-                    more consistent
-                    than the Ten
-                    Commandments.</p>
-            </div>
-            <div class="gridImage">
-                <img src="images/Ellipse 3.png">
-                <p class="gridText">Our best-selling Reuben sammie,
-                    though the French
-                    Dips are god-tier.</p>
-            </div>
-            <div class="gridImage">
-                <img src="images/Ellipse 4.png">
-                <p class="gridText">If you can’t choose,
-                    try every single
-                    item until we run
-                    out of ingredients.</p>
-            </div>
-            <div class="gridImage">
-                <img src="images/Ellipse 5.png">
-                <p class="gridText">Tables crucial to
-                    your experience,
-                    otherwise you’d be
-                    eating on the floor.</p>
-            </div>
-            <div class="gridImage">
-                <img src="images/Ellipse 6.png">
-                <p class="gridText">Legendary neon,
-                    permanently on,
-                    your North Star,
-                    a beacon of hope.</p>
-            </div>
-        </section>
-    </table>
+    <section class="banner">
+        <img class="starBeer" src="images/star-beer.png">
+        <img class="circleMusic" src="images/circle-livemusic.png">
+    </section>
+
+    <section class="threeByThree">
+        <div class="gridImage">
+            <img src="images/Ellipse 1.png">
+            <p class="gridText">Landmark stage home to local
+                luminaries like
+                Beatle Bash.</p>
+        </div>
+        <div class="gridImage">
+            <img src="images/Ellipse 2.png">
+            <p class="gridText">Chalkboard menu
+                more consistent
+                than the Ten
+                Commandments.</p>
+        </div>
+        <div class="gridImage">
+            <img src="images/Ellipse 3.png">
+            <p class="gridText">Our best-selling Reuben sammie,
+                though the French
+                Dips are god-tier.</p>
+        </div>
+        <div class="gridImage">
+            <img src="images/Ellipse 4.png">
+            <p class="gridText">If you can’t choose,
+                try every single
+                item until we run
+                out of ingredients.</p>
+        </div>
+        <div class="gridImage">
+            <img src="images/Ellipse 5.png">
+            <p class="gridText">Tables crucial to
+                your experience,
+                otherwise you’d be
+                eating on the floor.</p>
+        </div>
+        <div class="gridImage">
+            <img src="images/Ellipse 6.png">
+            <p class="gridText">Legendary neon,
+                permanently on,
+                your North Star,
+                a beacon of hope.</p>
+        </div>
+    </section>
+    <footer>
+        <div class="socialMedia">
+            <img src="images/Facebook.png">
+            <img src="images/Instagram.png">
+            <img src="images/Group.png">
+        </div>
+
+        <div class="hours">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eum, at in, vero minus assumenda
+                autem itaque quia distinctio quisquam nihil atque cumque totam earum quod error repellat! Dicta,
+                eveniet.</p>
+        </div>
+
+        <div class="location">
+            <p>Location</p>
+            <img src="images/map.png">
+        </div>
+
+    </footer>
+
 </body>
 
 
