my js was being pulled before jquery so no references to jquery were being made and the code did not work, swapped the script src lines around and working again.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
+    <!-- Jquery must come first before external JS file -->
     <title>NeWorlDeli</title>
 </head>
 
