General updates: Centered the body tag, adjusted some class names, added more media query breakpoints (mostly for the background-image but also other elements), among other slight adjustments.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <header>
-        <div class="inline-block logo">
+        <div class="logo">
             <img src="images/logo.png">
         </div>
-        <nav class="inline-block">
+        <nav class="">
             <ul>
                 <li>Menu</li>
                 <li>About</li>
@@ -31,7 +31,7 @@
         <img class="circleMusic" src="images/circle-livemusic.png">
     </section>
 
-    <section class="threeByThree">
+    <section class="circlesGrid">
         <div class="gridImage">
             <img src="images/Ellipse 1.png">
             <p class="gridText">Landmark stage home to local
