--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">
             <img src="images/logo.png">
         </div>
-        <nav class="">
+        <nav>
             <ul>
                 <li>Menu</li>
                 <li>About</li>
