continued to make adjustments and improve responsivenes, made use of many media queries, its a bit jerky and not as fluid as I would like but will have to do.

--- a/index.html
+++ b/index.html
@@ -81,14 +81,20 @@
         </div>
 
         <div class="hours">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eum, at in, vero minus assumenda
-                autem itaque quia distinctio quisquam nihil atque cumque totam earum quod error repellat! Dicta,
-                eveniet.</p>
+            <p>Monday — Saturday
+                <br>
+                11am — 9pm
+                <br>
+                <br>
+
+                Sunday
+                <br>
+                11am — 5pm
+            </p>
         </div>
 
         <div class="location">
-            <p>Location</p>
-            <img src="images/map.png">
+            <img class="mapImg" src="images/map.png">
         </div>
 
     </footer>
